First take at SeExpr bundleable scripts
This commit adds the KoResource infrastructure (KoResource server, MIME
type entry, chooser widget) to load and apply SeExpr scripts.

The container was modeled after Anna Medonosová's work on gamut masks:
so far, there is a "SeExpr script package" Zip file with .kse extension,
containing two files: preview.png and script.se. The latter is loaded
and inserted on Disney's SeExpr's ExprEditor widget as an expression.

TODO:
- Be able to *save* scripts as bundleable resources
  - This needs to figure out where/how to render a preview
- Be able to *bundle* scripts e.g. inside Deevad's bundle package
- Additional metadata

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -594,6 +594,7 @@ set_package_properties(SeExpr2 PROPERTIES
     PURPOSE "Required by the SeExpr generator layer"
 )
 macro_bool_to_01(SeExpr2_FOUND HAVE_SEEXPR)
+configure_file(config-seexpr.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config-seexpr.h )
 
 find_package(ZLIB)
 set_package_properties(ZLIB PROPERTIES
