Compositions Docker now Allows for the Exporting of Animations
Other changes needed to be made to get this to happen: Specifically,
the plugin `extensions/animationrenderer` is now removed and built
internally into Krita so that shared access is possible.

Compositions Docker's export settings are much simpler than the
Animation Export window for the time being. If users need more
control of export settings, we can come back to this. For the time
being, we simply use the previously used export settings for animation.

(Cherry-picked from master commit 84a2ebb263c1454386f5eb57c3edebaf60b136b4)

--- a/libs/ui/CMakeLists.txt
+++ b/libs/ui/CMakeLists.txt
@@ -321,6 +321,13 @@ set(kritaui_LIB_SRCS
     actions/kis_selection_action_factories.cpp
     actions/KisPasteActionFactories.cpp
     actions/KisTransformToolActivationCommand.cpp
+    animation/KisVideoSaver.cpp
+    animation/KisAnimationRenderingOptions.cpp
+    animation/KisAnimationRender.cpp
+    animation/KisDlgAnimationRenderer.cpp
+    animation/VideoExportOptionsDialog.cpp
+    animation/VideoHDRMetadataOptionsDialog.cpp
+    animation/KisHDRMetadataOptions.cpp
     input/kis_touch_shortcut.cpp
     kis_document_undo_store.cpp
     kis_gui_context_command.cpp
@@ -560,6 +567,9 @@ ki18n_wrap_ui(kritaui_LIB_SRCS
     input/wintab/kis_screen_size_choice_dialog.ui
     input/wintab/drawpile_tablettester/tablettest.ui
 
+    animation/wdg_animationrenderer.ui
+    animation/video_export_options_dialog.ui
+    animation/VideoHDRMetadataOptionsDialog.ui
 )
 
 if(WIN32)
