Build GSL as shared on all Unix platforms
There's no doc on why GCC doesn't like the static version...

--- a/3rdparty/ext_gsl/CMakeLists.txt
+++ b/3rdparty/ext_gsl/CMakeLists.txt
@@ -1,7 +1,7 @@
 #
 # From https://github.com/ampl/gsl. which adds CMake support to gsl
 #
-if (ANDROID)
+if (UNIX)
 SET(EXTPREFIX_gsl "${EXTPREFIX}" )
 ExternalProject_Add( ext_gsl
 
