Finalize bundling support of SeExpr scripts
This adds the missing functionality to create, save and bundle SeExpr
scripts.

It includes:

* dialog to save and overwrite presets
* KisSharedPtr definition, to automate memory management inside the
dialogs
* slots and signals to communicate selected preset to SeExpr
* integration of SeExpr resources with the bundle manager

Everything is hidden behind the HAVE_SEEXPR flag, which is added if
CMake detects the presence of the SeExpr library.

I have also adjusted the path of the SeExpr scripts folder, as it did
not match the expectations of the bundle manager (Ko/Kis + resType,
where resType is the folder name in .local/share/krita).

Thanks to Scott Petrovic and Anna Medonosová for their work on paint ops
and gamut masks. Most of the stuff here is adjustments to match SeExpr's
requirements.

--- a/plugins/generators/seexpr/CMakeLists.txt
+++ b/plugins/generators/seexpr/CMakeLists.txt
@@ -3,11 +3,13 @@ set(kritaseexprgenerator_SOURCES
     SeExprExpressionContext.cpp
     generator.cpp
     kis_wdg_seexpr.cpp
+    kis_wdg_seexpr_presets_save.cpp
     )
 
 
 ki18n_wrap_ui(kritaseexprgenerator_SOURCES
     wdgseexpr.ui
+    wdgseexprsavepreset.ui
     )
 
 add_library(kritaseexprgenerator MODULE ${kritaseexprgenerator_SOURCES})
