Added Photobash Images plugin

--- a/plugins/python/CMakeLists.txt
+++ b/plugins/python/CMakeLists.txt
@@ -97,6 +97,7 @@ install_pykrita_plugin(krita_script_starter)
 install_pykrita_plugin(plugin_importer)
 install_pykrita_plugin(mixer_slider_docker)
 install_pykrita_plugin(channels2layers)
+install_pykrita_plugin(photobash_images)
 
 # if(PYTHON_VERSION_MAJOR VERSION_EQUAL 3)
 #     install_pykrita_plugin(cmake_utils)
