--- a/plugins/tools/tool_transform2/tests/CMakeLists.txt
+++ b/plugins/tools/tool_transform2/tests/CMakeLists.txt
@@ -13,6 +13,6 @@ ecm_add_test(test_save_load_transform_args.cpp
     NAME_PREFIX plugins-tooltransform-
     LINK_LIBRARIES kritatooltransform kritaui kritaimage Qt5::Test)
 
-ecm_add_test(test_animated_transform_parameters.cpp
+krita_add_broken_unit_test(test_animated_transform_parameters.cpp
     NAME_PREFIX plugins-tooltransform-
     LINK_LIBRARIES kritatooltransform kritaui kritaimage Qt5::Test)
