Add improved halftone filter

--- a/plugins/filters/halftone/CMakeLists.txt
+++ b/plugins/filters/halftone/CMakeLists.txt
@@ -1,10 +1,16 @@
-set(kritahalftone_SOURCES kis_halftone_filter.cpp )
+set(kritahalftone_SOURCES
+    KisHalftoneFilter.cpp
+    KisHalftoneFilterConfiguration.cpp
+    KisHalftoneConfigWidget.cpp
+    KisHalftoneConfigPageWidget.cpp
+)
 
 ki18n_wrap_ui(kritahalftone_SOURCES
-    wdg_halftone_filter.ui
-    )
+    KisHalftoneConfigWidget.ui
+    KisHalftoneConfigPageWidget.ui
+)
 
 add_library(kritahalftone MODULE ${kritahalftone_SOURCES})
 target_link_libraries(kritahalftone kritaui)
-install(TARGETS kritahalftone  DESTINATION ${KRITA_PLUGIN_INSTALL_DIR})
+install(TARGETS kritahalftone DESTINATION ${KRITA_PLUGIN_INSTALL_DIR})
 
