GSoC 2020: Add Disney Animation's SeExpr as a new Fill Layer type (master branch)
This commit condenses all changes made in
amyspark/T13097-gsoc2020-seexpr into the master branch.
It includes all changes up to commit
660b07167bb3d8c1e250eae13ae4783e9dfa0c59, plus the necessary adjustments
for the new resource system. I have included the load functionality as
part of the already commented out blocks of code.

This commit increases the databaseVersion of Krita to 0.0.3, since there
is no functionality yet to pick up new resource types.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -595,6 +595,18 @@ endif()
 ############################
 ###########################
 
+##
+## Test for SeExpr
+##
+find_package(SeExpr2)
+set_package_properties(SeExpr2 PROPERTIES
+    URL "https://wdas.github.io/SeExpr/"
+    TYPE OPTIONAL
+    PURPOSE "Required by the SeExpr generator layer"
+)
+macro_bool_to_01(SeExpr2_FOUND HAVE_SEEXPR)
+configure_file(config-seexpr.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config-seexpr.h )
+
 find_package(ZLIB)
 set_package_properties(ZLIB PROPERTIES
     DESCRIPTION "Compression library"
