--- a/plugins/generators/CMakeLists.txt
+++ b/plugins/generators/CMakeLists.txt
@@ -2,3 +2,6 @@ add_subdirectory(solid)
 add_subdirectory(pattern)
 add_subdirectory(simplexnoise)
 add_subdirectory(screentone)
+if(SeExpr2_FOUND)
+  add_subdirectory(seexpr)
+endif()
