Enable Fill Layers to be multithreaded
This commit introduces multithreaded KisGenerator-based layers, enabling
Fill Layers (in particular the upcoming SeExpr generator) to render its
contents in multiple tiles and speeding up draw times.

(cherry picked from commit de73a0db8c0f3aadb6588d18079940cbb9c7fae9)

--- a/libs/image/CMakeLists.txt
+++ b/libs/image/CMakeLists.txt
@@ -132,6 +132,7 @@ set(kritaimage_LIB_SRCS
    generator/kis_generator.cpp
    generator/kis_generator_layer.cpp
    generator/kis_generator_registry.cpp
+   generator/kis_generator_stroke_strategy.cpp
    floodfill/kis_fill_interval_map.cpp
    floodfill/kis_scanline_fill.cpp
    lazybrush/kis_min_cut_worker.cpp
