Save and restore chosen SeExpr preset
This commits also migrates the default example script
to a bundled preset named "Disney noisecolor2", that
is a direct copy of the noisecolor2.se example in the
SeExpr distro.

--- a/krita/data/CMakeLists.txt
+++ b/krita/data/CMakeLists.txt
@@ -16,6 +16,9 @@ add_subdirectory( symbols )
 add_subdirectory( preset_icons )
 add_subdirectory( metadata/schemas )
 add_subdirectory( gamutmasks )
+if(HAVE_SEEXPR)
+add_subdirectory( seexpr_scripts )
+endif()
 add_subdirectory( windowlayouts )
 add_subdirectory( donation )
 
