Added preset editor with advanced settings

--- a/plugins/paintops/mypaint/CMakeLists.txt
+++ b/plugins/paintops/mypaint/CMakeLists.txt
@@ -15,13 +15,22 @@ set(kritamypaintop_SOURCES
     kis_mypaint_surface.cpp
     kis_mypaint_brush.cpp
     kis_my_paintop_factory.cpp
+    kis_mypaint_curve_option_widget.cpp
+    kis_mypaintbrush_options_selector.cpp
+    kis_mypaintbrush_options_model.cpp
+    kis_mypaintbrush_option.cpp
+    kis_mypaint_curve_option.cpp
 )
 
-ki18n_wrap_ui(kritamypaintop_SOURCES wdgmypaintoptions.ui )
+ki18n_wrap_ui(kritamypaintop_SOURCES wdgmypaintoptions.ui wdgmypaintcurveoption.ui wdgmypaintbrushoptionsselector.ui)
+#ki18n_wrap_ui(kritamypaintop_SOURCES wdgmypaintcurveoption.ui )
 
 add_library(kritamypaintop MODULE ${kritamypaintop_SOURCES})
 
-target_link_libraries(kritamypaintop kritalibpaintop mypaint)
+target_link_libraries(kritamypaintop kritalibpaintop mypaint kritawidgetutils kritaui kritalibbrush)
+#target_link_libraries(kritamypaintop kritaui kritalibbrush kritawidgetutils)
+#target_link_libraries(kritamypaintop LINK_INTERFACE_LIBRARIES kritaui kritalibbrush)
+
 
 install(TARGETS kritamypaintop  DESTINATION ${KRITA_PLUGIN_INSTALL_DIR})
 
