Fix KisPaintOpPreset to connect to the active gradient properly
The patch implements the follwoing things:

1) A abstract KoCanvasResourcesInterface class that provides access
   to resources for the code that cannot depend on
   KoCanvasResourceProvider (e.g. gradients). Specific implementations
   may forward the requests either to KoCanvasResourceProvider or to
   a local storage.

2) KisPaintOpConfigWidget and KisPaintOpOption now store two pointers,
   to KisResourcesInterface and to KoCanvasResourcesInterface.

3) As a consequence, paintop options now don't access
   KisGlobalResourcesInterface. Instead, they use locally stored
   pointers to both types of resources.

4) KisTextureProperties and KisBrushOptionProperties now accept
   a pointer to KoCanvasResourcesInterface. It is needed for
   initializing internal gradients properly.

5) KoResource now has a special method requiredCanvasResources(). It
   lets the resource to declare if it depends on any canvas resource,
   like Fg/Bg colors or the current graident.

6) When the paintop preset has no KoCanvasResourcesInterface associated,
   the brush switches into a fallback mode and paints with red color.

# Conflicts:
#	libs/flake/KoCanvasResourceProvider.cpp
#	libs/flake/KoCanvasResourceProvider.h

--- a/libs/resources/CMakeLists.txt
+++ b/libs/resources/CMakeLists.txt
@@ -43,6 +43,9 @@ set(kritaresources_LIB_SRCS
     KisResourcesInterface.cpp
     KisLocalStrokeResources.cpp
     KisGlobalResourcesInterface.cpp
+
+    KoCanvasResourcesInterface.cpp
+    KoCanvasResourcesLocalStorage.cpp
 )
 
 qt5_add_resources(kritaresources_LIB_SRCS sql.qrc)
