Implement canvas resource dependencies
KoActiveCanvasResourceDependency is a special class for representing
a dependency between two canvas resources. When the target of the
dependency changes, the source should get update notification.

# Conflicts:
#	libs/flake/KoCanvasResourceProvider.cpp
#	libs/flake/KoCanvasResourceProvider.h

--- a/libs/flake/CMakeLists.txt
+++ b/libs/flake/CMakeLists.txt
@@ -18,6 +18,8 @@ set(kritaflake_SRCS
     KoCanvasBase.cpp
     KoResourceManager_p.cpp
     KoDerivedResourceConverter.cpp
+    KoActiveCanvasResourceDependency.cpp
+    KoActiveCanvasResourceDependencyKoResource.cpp
     KoResourceUpdateMediator.cpp
     KoCanvasResourceProvider.cpp
     KoDocumentResourceManager.cpp
