Renamed KisTimeRange => KisTimeSpan
Renamed some functions in KisKeyframeChannel

--- a/libs/image/CMakeLists.txt
+++ b/libs/image/CMakeLists.txt
@@ -210,7 +210,7 @@ set(kritaimage_LIB_SRCS
    kis_histogram.cc
    kis_image_interfaces.cpp
    kis_image_animation_interface.cpp
-   kis_time_range.cpp
+   kis_time_span.cpp
    kis_node_graph_listener.cpp
    kis_image.cc
    kis_image_signal_router.cpp
