Decouple OpenJPEG from png, tiff, and zlib
These are used only in the demo executables, and will be picked from the
system (AppImage) or previous dependency builds (macOS/Windows).
In any case, they should not impede a successful library build.

This is a prerequisite for enabling OpenJPEG in AppImage.

--- a/3rdparty/ext_openjpeg/CMakeLists.txt
+++ b/3rdparty/ext_openjpeg/CMakeLists.txt
@@ -9,6 +9,5 @@ ExternalProject_Add( ext_openjpeg
 	
     UPDATE_COMMAND ""
 	ALWAYS 0
-    DEPENDS ext_png ext_tiff ext_lcms2 ext_zlib
+    DEPENDS ext_lcms2
 )
-
