--- a/plugins/dockers/overview/CMakeLists.txt
+++ b/plugins/dockers/overview/CMakeLists.txt
@@ -1,4 +1,7 @@
-set(KRITA_OVERVIEWDOCKER_SOURCES overviewdocker.cpp overviewdocker_dock.cpp overviewwidget.cc )
+set(KRITA_OVERVIEWDOCKER_SOURCES overviewdocker.cpp
+    overviewdocker_dock.cpp
+    overviewwidget.cc
+    OverviewThumbnailStrokeStrategy.cpp)
 add_library(kritaoverviewdocker MODULE ${KRITA_OVERVIEWDOCKER_SOURCES})
 target_link_libraries(kritaoverviewdocker kritaui)
 install(TARGETS kritaoverviewdocker  DESTINATION ${KRITA_PLUGIN_INSTALL_DIR})
