Make Python include path considered as system include
This will avoid having warnings coming from their includes
as is done with other system includes.

--- a/plugins/extensions/pykrita/kritarunner/CMakeLists.txt
+++ b/plugins/extensions/pykrita/kritarunner/CMakeLists.txt
@@ -14,7 +14,10 @@ set(kritarunner_SRCS main.cpp
 )
 
 add_executable(kritarunner ${kritarunner_SRCS})
-target_link_libraries(kritarunner 
+
+target_include_directories(kritarunner SYSTEM PUBLIC "${PYTHON_INCLUDE_DIRS}")
+
+target_link_libraries(kritarunner
                     PRIVATE
                       ${PYTHON_LIBRARY}
                       kritaui
