Add SeExpr resource bundle
The attached resource bundle packs all of the examples in this thread:

https://krita-artists.org/t/procedural-texture-generator-example-and-wishes/7638

Thanks to Wolthera van Hövell and David Revoy for their work.

(cherry picked from commit dfeec9fad6cb8743507fe77666fec01176559df5)

CCMAIL: kimageshop@kde.org

--- a/krita/data/bundles/CMakeLists.txt
+++ b/krita/data/bundles/CMakeLists.txt
@@ -2,4 +2,5 @@ install( FILES
     README
     Krita_3_Default_Resources.bundle
     Krita_4_Default_Resources.bundle
+    Krita_Artists_SeExpr_examples.bundle
 DESTINATION  ${DATA_INSTALL_DIR}/krita/bundles)
