--- a/libs/resources/CMakeLists.txt
+++ b/libs/resources/CMakeLists.txt
@@ -26,6 +26,8 @@ set(kritaresources_LIB_SRCS
     KisTagModel.cpp
     KisTagModelProvider.cpp
 
+    KisTagResourceModel.cpp
+
     KoResource.cpp
     KoResourceBundle.cpp
     KoResourceBundleManifest.cpp
