--- a/libs/resources/tests/CMakeLists.txt
+++ b/libs/resources/tests/CMakeLists.txt
@@ -23,5 +23,6 @@ ecm_add_tests(
     TestStorageModel
     TestResourceSearchBoxFilter
     TestStorageFilterProxyModel
+    TestTagResourceModel
     NAME_PREFIX "libs-kritaresources-"
     LINK_LIBRARIES kritaglobal kritaplugin kritaresources kritaversion KF5::ConfigCore Qt5::Sql Qt5::Test)
