--- a/plugins/impex/libkra/tests/CMakeLists.txt
+++ b/plugins/impex/libkra/tests/CMakeLists.txt
@@ -7,12 +7,6 @@ macro_add_unittest_definitions()
 
 ecm_add_tests(
     kis_kra_loader_test.cpp
+    kis_kra_saver_test.cpp
     LINK_LIBRARIES kritaui kritalibkra Qt5::Test
     NAME_PREFIX "plugins-impex-")
-
-    
-krita_add_broken_unit_test(kis_kra_saver_test.cpp
-    TEST_NAME kis_kra_saver_test.cpp
-    LINK_LIBRARIES kritaui Qt5::Test
-    NAME_PREFIX "plugins-impex-")
-    
