--- a/plugins/dockers/animation/tests/CMakeLists.txt
+++ b/plugins/dockers/animation/tests/CMakeLists.txt
@@ -5,13 +5,9 @@ macro_add_unittest_definitions()
 
 include(KritaAddBrokenUnitTest)
 
-krita_add_broken_unit_test(timeline_model_test.cpp
-    TEST_NAME timeline_model_test.cpp
-    NAME_PREFIX "plugins-dockers-animation-"
-    LINK_LIBRARIES ${KDE4_KDEUI_LIBS} kritaanimationdocker kritaui kritaimage Qt5::Test)
-
 ecm_add_tests(
     kis_animation_utils_test.cpp
+    timeline_model_test.cpp
     NAME_PREFIX "plugins-dockers-animation-"
     LINK_LIBRARIES ${KDE4_KDEUI_LIBS} kritaanimationdocker kritaui kritaimage Qt5::Test)
 
