--- a/libs/ui/tests/CMakeLists.txt
+++ b/libs/ui/tests/CMakeLists.txt
@@ -27,6 +27,7 @@ ecm_add_tests(
     kis_animation_importer_test.cpp
     KisSpinBoxSplineUnitConverterTest.cpp
     KisDocumentReplaceTest.cpp
+    kis_derived_resources_test.cpp
 
     LINK_LIBRARIES kritaui Qt5::Test
     NAME_PREFIX "libs-ui-"
@@ -162,12 +163,6 @@ krita_add_broken_unit_test( kis_categories_mapper_test.cpp testing_categories_ma
 
 krita_add_broken_unit_test( kis_animation_frame_cache_test.cpp
     TEST_NAME kis_animation_frame_cache_test
-    LINK_LIBRARIES kritaui Qt5::Test
-    NAME_PREFIX "libs-ui-")
-
-
-krita_add_broken_unit_test( kis_derived_resources_test.cpp
-    TEST_NAME kis_derived_resources_test
     LINK_LIBRARIES kritaui Qt5::Test
     NAME_PREFIX "libs-ui-")
 
