--- a/libs/image/tests/CMakeLists.txt
+++ b/libs/image/tests/CMakeLists.txt
@@ -137,6 +137,7 @@ ecm_add_tests(
     TestAslStorage.cpp
     kis_async_merger_test.cpp
     kis_selection_test.cpp
+    kis_update_scheduler_test.cpp
 
     LINK_LIBRARIES kritaimage Qt5::Test
     NAME_PREFIX "libs-image-"
@@ -152,12 +153,6 @@ krita_add_broken_unit_test( kis_transform_mask_test.cpp
 
 krita_add_broken_unit_test( kis_layer_styles_test.cpp
     TEST_NAME kis_layer_styles_test
-    LINK_LIBRARIES kritaimage Qt5::Test
-    NAME_PREFIX "libs-image-"
-)
-
-krita_add_broken_unit_test( kis_update_scheduler_test.cpp
-    TEST_NAME kis_update_scheduler_test
     LINK_LIBRARIES kritaimage Qt5::Test
     NAME_PREFIX "libs-image-"
 )
