--- a/libs/image/tests/CMakeLists.txt
+++ b/libs/image/tests/CMakeLists.txt
@@ -139,6 +139,7 @@ ecm_add_tests(
     kis_selection_test.cpp
     kis_update_scheduler_test.cpp
     kis_colorize_mask_test.cpp
+    kis_processings_test.cpp
 
     LINK_LIBRARIES kritaimage Qt5::Test
     NAME_PREFIX "libs-image-"
@@ -160,12 +161,6 @@ krita_add_broken_unit_test( kis_layer_styles_test.cpp
 
 krita_add_broken_unit_test( kis_paint_device_test.cpp
     TEST_NAME kis_paint_device_test
-    LINK_LIBRARIES kritaimage Qt5::Test
-    NAME_PREFIX "libs-image-"
-)
-
-krita_add_broken_unit_test( kis_processings_test.cpp
-    TEST_NAME kis_processings_test
     LINK_LIBRARIES kritaimage Qt5::Test
     NAME_PREFIX "libs-image-"
 )
