Fix and unbreak KisShapeControllerTest
Not that it caught a real bug, but the configuration was rather dangerous
and could cause a crash in some special cases.

BUG:416591

--- a/libs/ui/tests/CMakeLists.txt
+++ b/libs/ui/tests/CMakeLists.txt
@@ -78,6 +78,18 @@ ecm_add_test(
     LINK_LIBRARIES kritaui Qt5::Test
     NAME_PREFIX "libs-ui-")
 
+ecm_add_test( kis_shape_controller_test.cpp kis_dummies_facade_base_test.cpp
+    TEST_NAME kis_shape_controller_test
+    LINK_LIBRARIES kritaui Qt5::Test
+    NAME_PREFIX "libs-ui-")
+
+ecm_add_test( kis_dummies_facade_test.cpp kis_dummies_facade_base_test.cpp ../../../sdk/tests/testutil.cpp
+    TEST_NAME kis_dummies_facade_test
+    LINK_LIBRARIES kritaui Qt5::Test
+    NAME_PREFIX "libs-ui-")
+
+
+
 ##### Tests that currently fail and should be fixed #####
 
 include(KritaAddBrokenUnitTest)
@@ -89,10 +101,6 @@ krita_add_broken_unit_test(
     LINK_LIBRARIES kritaui Qt5::Test
     NAME_PREFIX "libs-ui-")
 
-krita_add_broken_unit_test( kis_shape_controller_test.cpp kis_dummies_facade_base_test.cpp
-    TEST_NAME kis_shape_controller_test
-    LINK_LIBRARIES kritaui Qt5::Test
-    NAME_PREFIX "libs-ui-")
 
 krita_add_broken_unit_test( kis_exiv2_test.cpp
     TEST_NAME KisExiv2Test
@@ -138,11 +146,6 @@ krita_add_broken_unit_test( kis_selection_manager_test.cpp
 
 krita_add_broken_unit_test( kis_node_manager_test.cpp
     TEST_NAME KisNodeManagerTest
-    LINK_LIBRARIES kritaui Qt5::Test
-    NAME_PREFIX "libs-ui-")
-
-krita_add_broken_unit_test( kis_dummies_facade_test.cpp kis_dummies_facade_base_test.cpp ../../../sdk/tests/testutil.cpp
-    TEST_NAME KisDummiesFacadeTest
     LINK_LIBRARIES kritaui Qt5::Test
     NAME_PREFIX "libs-ui-")
 
