Fix and unbreak KisLayerStylesTest
BUG:416588

--- a/libs/image/tests/CMakeLists.txt
+++ b/libs/image/tests/CMakeLists.txt
@@ -141,6 +141,7 @@ ecm_add_tests(
     kis_colorize_mask_test.cpp
     kis_processings_test.cpp
     kis_paint_device_test.cpp
+    kis_layer_styles_test.cpp
 
     LINK_LIBRARIES kritaimage Qt5::Test
     NAME_PREFIX "libs-image-"
@@ -150,12 +151,6 @@ include(KritaAddBrokenUnitTest)
 
 krita_add_broken_unit_test( kis_transform_mask_test.cpp
     TEST_NAME     kis_transform_mask_test
-    LINK_LIBRARIES kritaimage Qt5::Test
-    NAME_PREFIX "libs-image-"
-)
-
-krita_add_broken_unit_test( kis_layer_styles_test.cpp
-    TEST_NAME kis_layer_styles_test
     LINK_LIBRARIES kritaimage Qt5::Test
     NAME_PREFIX "libs-image-"
 )
