Fix setting a proper color profile in RAW import plugin
The patch also activates instalation of more Elle's color profiles,
because they are used in RAW options.

The proper color space for Adobe RGB is ClayRGB-elle-V2-g22.icc,
because TRC curve for Adobe's color space is 2.2, not sRGB one.

BUG:425325

--- a/krita/data/profiles/elles-icc-profiles/CMakeLists.txt
+++ b/krita/data/profiles/elles-icc-profiles/CMakeLists.txt
@@ -2,6 +2,9 @@
 install(FILES
     ACEScg-elle-V4-g10.icc
     ClayRGB-elle-V4-srgbtrc.icc
+    ClayRGB-elle-V2-g22.icc # for AdobeRGB
+    WideRGB-elle-V2-g22.icc # for WideGamutRGB
+    LargeRGB-elle-V2-g22.icc # for ProPhotoRGB
 
     Gray-D50-elle-V2-g10.icc
     Gray-D50-elle-V2-g18.icc
