Remove warning if libmypaint not found

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -733,8 +733,11 @@ set_package_properties(LibMyPaint PROPERTIES
     DESCRIPTION "MyPaint brush engine API for C/C++"
     TYPE OPTIONAL
     PURPOSE "Required for the mypaint brush engine")
-if(LIBMYPAINT_VERSION VERSION_LESS "1.4.0")
-    message(WARNING "Please update libmypaint to version above 1.4.0 as lower versions are known to crash")
+if(LIBMYPAINT_FOUND)
+    
+    if(LIBMYPAINT_VERSION VERSION_LESS "1.4.0")
+        message(WARNING "Please update libmypaint to version above 1.4.0 as lower versions are known to crash")
+    endif()
 endif()
 
 ##
