Animation Refactor: KisTimeSpan Construction Functions.
Removed ambiguous public constructors, replacing them with named
construction functions:

`KisTimeSpan::fromTimeToTime()` will create a KisTimeSpan between `start` and `end` time.

`KisTimeSpan::fromTimeWithDuration()` will create a KisTimeSpan which starts at `start`
and lasts for `duration`.

Added unit test for KisTimeSpan and all operators..

--- a/libs/image/tests/CMakeLists.txt
+++ b/libs/image/tests/CMakeLists.txt
@@ -132,6 +132,7 @@ ecm_add_tests(
     kis_cage_transform_worker_test.cpp
     kis_random_generator_test.cpp
     kis_keyframing_test.cpp
+    kis_time_span_test.cpp
     kis_filter_mask_test.cpp
     kis_asl_layer_style_serializer_test.cpp
     TestAslStorage.cpp
