--- a/packaging/config.ini
+++ b/packaging/config.ini
@@ -1,6 +1,7 @@
 [krita]
 gitModule   = yes
 gitTag      = v4.3.0
+category    = graphics
 mainmodule  = extragear
 l10nmodule  = krita
 version     = 4.3.0
