Add a warning message when changing profile of a multilayered image
When changing color profile of the image blending modes start to
behave differently. The biggest visual drift is caused by
the difference in tone response curves, though just changing
primaries will also affect blending modes like "Overlay".

BUG:356303

--- a/libs/ui/CMakeLists.txt
+++ b/libs/ui/CMakeLists.txt
@@ -278,6 +278,7 @@ set(kritaui_LIB_SRCS
     widgets/KisLayerStyleAngleSelector.cpp
     widgets/KisMemoryReportButton.cpp
     widgets/KisDitherWidget.cpp
+    widgets/KisWarningWidget.cpp
 
     KisPaletteEditor.cpp
     dialogs/KisDlgPaletteEditor.cpp
