Log and fix translation source for packaging

--- a/packaging/config.ini
+++ b/packaging/config.ini
@@ -2,7 +2,7 @@
 gitModule   = yes
 gitTag      = v4.3.0
 category    = graphics
-mainmodule  = extragear
+mainmodule  = branches/stable
 l10nmodule  = krita
 version     = 4.3.0
 translations= yes
